[package]
name = "rust_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rust_net"
crate-type=["staticlib"]

[dependencies]
reqwest= { version = "0.11" , default-features = false, features = ["brotli", "rustls", "rustls-tls", "cookies"]}
tokio = {version="1",features=["full"]}
slab = { version = "0.4", features = [] }

[profile.release]
codegen-units=1
lto="fat"
panic="abort"
