[package]
name = "rust_net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name="rust_net"
crate-type=["staticlib"]

[dependencies]
reqwest= { version = "0.11" , default-features = false, features = ["brotli", "rustls", "rustls-tls", "cookies"]}
tokio = {version="1",features=["full"]}
tokio-tungstenite ={ version="0.21",features = ["rustls-tls-webpki-roots"]}
http = "1"
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
slab = { version = "0.4", features = [] }

serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1.0"

[profile.release]
codegen-units=1
lto="fat"
panic="abort"
